--- a/cart/index.html
+++ b/cart/index.html
@@ -681,7 +681,7 @@
                 alert('Your cart is empty!');
                 return;
             }
-            window.location.href = './cart//checkout';
+            window.location.href = 'cart/checkout';
         }
         
         // Add recommended product to cart
